deploy/web/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-web-app
  template:
    metadata:
      labels:
        app: nodejs-web-app
    spec:
      containers:
      - name: nodejs-web-app
        image: hoanghp/web-nodejs
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-web-app
spec:
  selector:
    app: nodejs-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
